<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GeocatchingActivity!</string>
    <string name="app_name">GeoCatching</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_login">Remember login</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register on-line now!</string>
    <string name="error">ERROR</string>
    <string name="wrong_parameters">Wrong parameters</string>
    <string name="close">close</string>
    
    <string name="main_menu_title">The    GeoCatching     Game</string>
    <string name="game_list_label">All games</string>
    <string name="player_game_list_label">My games</string>
    <string name="history_label">History</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    
    <string name="log_w_fb">Facebook</string>
    <string name="log_w_gplus">Google+</string>
    <string name="log_w_4sq">4Square</string>
    <string name="log_w_twitter">Ttwitter</string>
    
    <string name="game_list_item_location">Location</string>
    <string name="game_list_item_players">Players</string>
    <string name="game_list_item_date">Date</string>
    
    <string name="join_game_title">Game</string>
    <string name="game_pressed">Would you like to join this game?</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    
    <string name="back_pressed_title">Back button pressed</string>
	<string name="back_pressed">What would you like to do now?</string>
	<string name="turnoff">Turn off</string>
	<string name="logout">Log out</string>
	
	<string name="social_logo">Social network logo</string>
	
	<string name="connect_with">Connect with</string>
    
	<string name="connect_with">Connect with:</string>
</resources>