<?xml version="1.0" encoding="utf-8"?>
<!-- http://www.iconarchive.com/ -->
<!-- keytool -list -alias androiddebugkey -keystore /home/michal/.android/debug.keystore -storepass android -keypass android -->
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" >
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="250dp" 
		android:layout_height="wrap_content"
		android:layout_centerInParent="true">
		<!-- MAIN TITLE -->
		<TextView 
		    android:gravity="center"
		    android:textSize="26sp"
		    android:text="@string/app_name"
			android:layout_width="fill_parent" 
			android:layout_height="90dp"
			android:layout_marginBottom="3dp"
		/>
		<!-- LOGIN TITLE -->
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/login_label"
			android:text="@string/login"
			android:textSize="18sp"
		/>
		<!-- LOGIN TEXT -->
		<EditText 
			android:layout_width="250dp"
			android:layout_height="wrap_content" 
			android:inputType="textNoSuggestions"
			android:textSize="18dp"
			android:id="@+id/login_text"
		/>
		<!-- PASSWORD TITLE -->
		<TextView
			android:layout_width="250dp" 
			android:layout_height="wrap_content" 
			android:id="@+id/password_label" 
			android:text="@string/password" 
			android:textSize="18sp"
			android:layout_marginTop="5sp"
		/>
		<!-- PASSWORD TEXT -->
		<EditText
			android:layout_width="250dp" 
			android:layout_height="wrap_content"
			android:id="@+id/password_text"
			android:textSize="18dp"
			android:inputType="textPassword"
		/>
		<!-- CHECKBOX FOR SAVING LOGIN -->
		<CheckBox
		    android:id="@+id/checkBox_remember"
			android:text="@string/remember_login" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:textSize="18sp"
		/>
		<!-- LOG IN BUTTON -->
		<Button
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:id="@+id/login_button" 
			android:text="@string/login_button"
		/>
		<Button
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:id="@+id/login_button" 
			android:text="@string/register_button"
		/>
	</LinearLayout>
</RelativeLayout>
