<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:background="@color/color_common_backgroud">
<TextView 
		    android:gravity="center"
		    android:textSize="26sp"
		    android:text="@string/connect_with"
			android:layout_width="fill_parent" 
			android:layout_height="90dp"
			android:layout_marginBottom="3dp"
		/>
    
<<<<<<< HEAD
=======
    <TextView 
		    android:gravity="center"
		    android:textSize="26sp"
		    android:text="@string/connect_with"
			android:layout_width="fill_parent" 
			android:layout_height="90dp"
			android:layout_marginBottom="3dp"
		/>
    
>>>>>>> 7046d7ed3faf2b387156d43204664d81ffd83205
     <LinearLayout
	    	android:layout_width="fill_parent"
	   	 	android:layout_height="wrap_content"
	    	android:orientation="horizontal" 
	   		android:gravity="center_horizontal"
    		android:layout_gravity="center_horizontal">
	    <LinearLayout
	    	android:layout_width="90dp"
	   	 	android:layout_height="90dp"
	    	android:orientation="vertical" 
	   		android:gravity="center"
	   		android:padding="0dp"
	   		>
		    <ImageView 
		        android:contentDescription="@string/social_logo"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:src="@drawable/ic_facebook"
		    />
		    <TextView
		       android:layout_height="wrap_content"
		       android:layout_width="wrap_content"
		       android:textSize="14sp"
		       android:text="@string/log_w_fb" 
		    />
		</LinearLayout>
		<LinearLayout
	    	android:layout_width="90dp"
	   	 	android:layout_height="90dp"
	    	android:orientation="vertical" 
	   		android:gravity="center"
	   		android:padding="0dp">
		    <ImageView 
		        android:contentDescription="@string/social_logo"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:src="@drawable/ic_gplus"
		    />
		    <TextView
		       android:layout_height="wrap_content"
		       android:layout_width="wrap_content"
		       android:textSize="14sp"
		       android:text="@string/log_w_gplus" 
		    />
	    
	 	</LinearLayout>
	 </LinearLayout>
	 
       
       <LinearLayout
   		android:layout_width="fill_parent"
  	 	android:layout_height="wrap_content"
   		android:orientation="horizontal" 
  		android:gravity="center_horizontal"
    	android:layout_gravity="center_horizontal">
     <LinearLayout
	    	android:layout_width="90dp"
	   	 	android:layout_height="90dp"
	    	android:orientation="vertical" 
	   		android:gravity="center_horizontal"
	   		android:padding="0dp">   
         
		    <ImageView 
		        android:contentDescription="@string/social_logo"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:src="@drawable/ic_foursquare"
		    />
		    <TextView
		       android:layout_height="wrap_content"
		       android:layout_width="wrap_content"
		       android:textSize="14sp"
		       android:text="@string/log_w_4sq" 
		    />
    </LinearLayout>
    <LinearLayout
	    	android:layout_width="90dp"
	   	 	android:layout_height="90dp"
	    	android:orientation="vertical" 
	   		android:gravity="center_horizontal"
	   		android:padding="0dp">
    
		    <ImageView 
		        android:contentDescription="@string/social_logo"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:src="@drawable/ic_twitter"
		    />
		    <TextView
		       android:layout_height="wrap_content"
		       android:layout_width="wrap_content"
		       android:textSize="14sp"
		       android:text="@string/log_w_twitter" 
		    />
	</LinearLayout>
	</LinearLayout>
</LinearLayout>